fix(meridian): scheduler agenda view misalignment

--- a/packages/meridian/scss/scheduler/_variables.scss
+++ b/packages/meridian/scss/scheduler/_variables.scss
@@ -130,10 +130,10 @@ $kendo-scheduler-cell-padding-y: k-spacing(2.5) !default;
 $kendo-scheduler-cell-height: $kendo-line-height-em !default;
 /// The width of the Scheduler date column.
 /// @group scheduler
-$kendo-scheduler-datecolumn-width: 12em !default;
+$kendo-scheduler-datecolumn-width: 12rem !default;
 /// The width of the Scheduler time column.
 /// @group scheduler
-$kendo-scheduler-timecolumn-width: 11em !default;
+$kendo-scheduler-timecolumn-width: 11rem !default;
 
 /// The background color of the non-working hours in the Scheduler.
 /// @group scheduler
